--- a/blogsite.yml
+++ b/blogsite.yml
@@ -19,3 +19,12 @@ spring:
     hibernate:
       ddl-auto: create
     show-sql: true
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8070/eureka/
